# pick-helper

./: .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml
common/: settings.py
dao/: database.py  roles.txt
frontend/: index.html
frontend/assets/: ProductDetail-eUleMyhg.js  ProductLayout-D-23iDEN.js  ProductTitle-C3cx5KYZ.js  index-CnDSOpzw.js  index-XYHktKdw.js  index-_gz16JdL.js
routers/: __init__.py  picks_api.py  sample_api.py
tests/: roles.txt
tests/routers/: sample_api_test.py
worker/: roles.txt  sample_worker.py
yaml/: configmap-domain.yaml  configmap.yaml  secret.yaml
